--- a/webapps/examples/WEB-INF/web.xml
+++ b/webapps/examples/WEB-INF/web.xml
@@ -27,94 +27,93 @@
     <display-name>Servlet and JSP Examples</display-name>
 
 
-    <!-- Define servlet-mapped and path-mapped example filters -->
-    <filter>
-        <filter-name>Servlet Mapped Filter</filter-name>
-        <filter-class>filters.ExampleFilter</filter-class>
-	<init-param>
-	    <param-name>attribute</param-name>
-	    <param-value>filters.ExampleFilter.SERVLET_MAPPED</param-value>
-	</init-param>
-    </filter>
-    <filter>
-        <filter-name>Path Mapped Filter</filter-name>
-        <filter-class>filters.ExampleFilter</filter-class>
-	<init-param>
-	    <param-name>attribute</param-name>
-	    <param-value>filters.ExampleFilter.PATH_MAPPED</param-value>
-	</init-param>
-    </filter>
-    <filter>
-        <filter-name>Request Dumper Filter</filter-name>
-        <filter-class>filters.RequestDumperFilter</filter-class>
-    </filter>
+<!--     Define servlet-mapped and path-mapped example filters -->
+<!--     <filter> -->
+<!--         <filter-name>Servlet Mapped Filter</filter-name> -->
+<!--         <filter-class>filters.ExampleFilter</filter-class> -->
+<!-- 	<init-param> -->
+<!-- 	    <param-name>attribute</param-name> -->
+<!-- 	    <param-value>filters.ExampleFilter.SERVLET_MAPPED</param-value> -->
+<!-- 	</init-param> -->
+<!--     </filter> -->
+<!--     <filter> -->
+<!--         <filter-name>Path Mapped Filter</filter-name> -->
+<!--         <filter-class>filters.ExampleFilter</filter-class> -->
+<!-- 	<init-param> -->
+<!-- 	    <param-name>attribute</param-name> -->
+<!-- 	    <param-value>filters.ExampleFilter.PATH_MAPPED</param-value> -->
+<!-- 	</init-param> -->
+<!--     </filter> -->
+<!--     <filter> -->
+<!--         <filter-name>Request Dumper Filter</filter-name> -->
+<!--         <filter-class>filters.RequestDumperFilter</filter-class> -->
+<!--     </filter> -->
 
-    <!-- Example filter to set character encoding on each request -->
-    <filter>
-        <filter-name>Set Character Encoding</filter-name>
-        <filter-class>filters.SetCharacterEncodingFilter</filter-class>
-        <init-param>
-            <param-name>encoding</param-name>
-            <param-value>EUC_JP</param-value>
-        </init-param>
-    </filter>
+<!--     Example filter to set character encoding on each request -->
+<!--     <filter> -->
+<!--         <filter-name>Set Character Encoding</filter-name> -->
+<!--         <filter-class>filters.SetCharacterEncodingFilter</filter-class> -->
+<!--         <init-param> -->
+<!--             <param-name>encoding</param-name> -->
+<!--             <param-value>EUC_JP</param-value> -->
+<!--         </init-param> -->
+<!--     </filter> -->
 
-    <filter>
-        <filter-name>Compression Filter</filter-name>
-        <filter-class>compressionFilters.CompressionFilter</filter-class>
+<!--     <filter> -->
+<!--         <filter-name>Compression Filter</filter-name> -->
+<!--         <filter-class>compressionFilters.CompressionFilter</filter-class> -->
 
-        <init-param>
-          <param-name>compressionThreshold</param-name>
-          <param-value>10</param-value>
-        </init-param>
-        <init-param>
-          <param-name>debug</param-name>
-          <param-value>0</param-value>
-        </init-param>
-    </filter>
+<!--         <init-param> -->
+<!--           <param-name>compressionThreshold</param-name> -->
+<!--           <param-value>10</param-value> -->
+<!--         </init-param> -->
+<!--         <init-param> -->
+<!--           <param-name>debug</param-name> -->
+<!--           <param-value>0</param-value> -->
+<!--         </init-param> -->
+<!--     </filter> -->
 
-    <!-- Define filter mappings for the defined filters -->
-    <filter-mapping>
-        <filter-name>Servlet Mapped Filter</filter-name>
-	<servlet-name>invoker</servlet-name>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>Path Mapped Filter</filter-name>
-	<url-pattern>/servlet/*</url-pattern>
-    </filter-mapping>
+<!--     Define filter mappings for the defined filters -->
+<!--     <filter-mapping> -->
+<!--         <filter-name>Servlet Mapped Filter</filter-name> -->
+<!-- 	<servlet-name>invoker</servlet-name> -->
+<!--     </filter-mapping> -->
+<!--     <filter-mapping> -->
+<!--         <filter-name>Path Mapped Filter</filter-name> -->
+<!-- 	<url-pattern>/servlet/*</url-pattern> -->
+<!--     </filter-mapping> -->
 
-<!-- Example filter mapping to apply the "Set Character Encoding" filter
-     to *all* requests processed by this web application -->
-<!--
-    <filter-mapping>
-        <filter-name>Set Character Encoding</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
--->
+<!--  Example filter mapping to apply the "Set Character Encoding" filter -->
+<!--      to *all* requests processed by this web application --> 
+<!--     <filter-mapping> -->
+<!--         <filter-name>Set Character Encoding</filter-name> -->
+<!--         <url-pattern>/*</url-pattern> -->
+<!--     </filter-mapping> -->
+<!-- -->
 
-<!--
-    <filter-mapping>
-      <filter-name>Compression Filter</filter-name>
-      <url-pattern>/CompressionTest</url-pattern>
-    </filter-mapping>
--->
+<!--  -->
+<!--     <filter-mapping> -->
+<!--       <filter-name>Compression Filter</filter-name> -->
+<!--       <url-pattern>/CompressionTest</url-pattern> -->
+<!--     </filter-mapping> -->
+<!-- -->
 
-<!--
-    <filter-mapping>
-        <filter-name>Request Dumper Filter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
--->
 
-    <!-- Define example application events listeners -->
-    <listener>
-        <listener-class>listeners.ContextListener</listener-class>
-    </listener>
-    <listener>
-        <listener-class>listeners.SessionListener</listener-class>
-    </listener>
+<!--     <filter-mapping> -->
+<!--         <filter-name>Request Dumper Filter</filter-name> -->
+<!--         <url-pattern>/*</url-pattern> -->
+<!--     </filter-mapping> -->
+ 
 
-    <!-- Define servlets that are included in the example application -->
+<!--     Define example application events listeners -->
+<!--     <listener> -->
+<!--         <listener-class>listeners.ContextListener</listener-class> -->
+<!--     </listener> -->
+<!--     <listener> -->
+<!--         <listener-class>listeners.SessionListener</listener-class> -->
+<!--     </listener> -->
+
+<!--     Define servlets that are included in the example application -->
 
     <servlet>
       <servlet-name>servletToJsp</servlet-name>
@@ -245,13 +244,13 @@
 	 <http-method>PUT</http-method>
       </web-resource-collection>
       <auth-constraint>
-         <!-- Anyone with one of the listed roles may access this area -->
+<!--          Anyone with one of the listed roles may access this area -->
          <role-name>tomcat</role-name>
 	 <role-name>role1</role-name>
       </auth-constraint>
     </security-constraint>
 
-    <!-- Default login configuration uses form-based authentication -->
+<!--     Default login configuration uses form-based authentication -->
     <login-config>
       <auth-method>FORM</auth-method>
       <realm-name>Example Form-Based Authentication Area</realm-name>
@@ -261,7 +260,7 @@
       </form-login-config>
     </login-config>
         
-    <!-- Security roles referenced by this web application -->
+<!--     Security roles referenced by this web application -->
     <security-role>
       <role-name>role1</role-name>
     </security-role>
@@ -269,15 +268,12 @@
       <role-name>tomcat</role-name>
     </security-role>    
 
-    <!-- Environment entry examples -->
-    <!--env-entry>
-      <env-entry-description>
-         The maximum number of tax exemptions allowed to be set.
-      </env-entry-description>
+<!--     Environment entry examples -->
+    <env-entry>
       <env-entry-name>maxExemptions</env-entry-name>
       <env-entry-type>java.lang.Integer</env-entry-type>
       <env-entry-value>15</env-entry-value>
-    </env-entry-->
+    </env-entry> 
     <env-entry>
       <env-entry-name>minExemptions</env-entry-name>
       <env-entry-type>java.lang.Integer</env-entry-type>
